# cendol

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  all_fns_v2.txt  all_functions.txt  cendol_output  const_eval_test.rs  contoh.c  cov.txt  cov_new.txt  coverage.txt  coverage_after.txt  coverage_atomic.txt  coverage_final.txt  coverage_new.txt  coverage_regr_final.txt  coverage_report.txt  coverage_report_new.txt  cpp-algo.md  csmith_diff.py  find_unused.sh  find_unused_aggressive.py  find_unused_all.sh  find_unused_v2.sh  gnu_extensions_tests.md  input.c  output_ctestsuite.txt  output_initial.txt  output_tinyexpr_clean_test.txt  output_tinyexpr_debug.txt  output_tinyexpr_debug_3.txt  output_tinyexpr_verify.txt  patch  patch.diff  patch.rs  patch2  patch2.diff  patch2.rs  (+56 more)
.github/workflows/: coverage-diff.yml  coverage.yml  nightly.yml  rust.yml
.jules/: bolt.md  guardian.md  rendi.md  reno.md
benches/: compiler_benches.rs
crates/cranelift/: UPSTREAM_VERSION
custom-include/: assert.h  complex.h  ctype.h  errno.h  fcntl.h  fenv.h  float.h  inttypes.h  iso646.h  limits.h  locale.h  math.h  setjmp.h  signal.h  stdalign.h  stdarg.h  stdatomic.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  stdnoreturn.h  string.h  termios.h  tgmath.h  threads.h  time.h  uchar.h  unistd.h  wchar.h  wctype.h
custom-include/sys/: ioctl.h  time.h  types.h
design-document/: ast_design.md  ast_dumper_design.md  c11_compiler_design.md  codegen_design.md  compiler_driver_design.md  data_flow_design.md  error_handling_design.md  lexer_design.md  main.md  mir_design.md  parser_design.md  performance_design.md  pratt_parser_diagram.md  preprocessor_design.md  rust_environment_design.md  semantic_analysis_design.md  semantic_lowering_design.md  semantic_lowering_flow.md
scripts/: rebase_cranelift.py
src/: ast.rs  ast_dumper.rs  codegen.rs  common.rs  compiler.rs  cranelift_dumper.rs  diagnostic.rs  driver.rs  dumper.rs  error.rs  error_recovery.rs  file.rs  generated_types.rs  intern.rs  lang_options.rs  lexer.rs  lib.rs  linker.rs  logger.rs  main.rs  mir.rs  mir_dumper.rs  parser.rs  pp.rs  preprocessor.rs  semantic.rs  source.rs  source_manager.rs  test_utils.rs  tests.rs  tests_ast_dumper.rs  tests_semantic.rs  types.rs
src/ast/: dumper.rs  literal.rs  literal_parsing.rs  literal_parsing.rs.orig  literal_parsing.rs.rej  mod.rs  nodes.rs  parsed.rs  parsed.rs.orig  parsed_types.rs  types.rs  utils.rs  visitor.rs
src/ast_dumper/: mod.rs
src/codegen/: clif_gen.rs  codegen.rs  error.rs  link_gen.rs  lower_expression.rs  lower_initializer.rs  mir_gen.rs  mir_gen_expression.rs  mir_gen_initializer.rs  mir_gen_ops.rs  mod.rs  object_gen.rs  tests.rs  translator.rs  util.rs
src/driver/: artifact.rs  cli.rs  compiler.rs  mod.rs  output.rs  tests_compiler.rs
src/lexer/: mod.rs  tests.rs  tests_lexer.rs
src/mir/: codegen.rs  dumper.rs  tests_codegen.rs  validation.rs
src/parser/: array_expr_interner.rs  ast.rs  declaration_core.rs  declarations.rs  declarator.rs  declarator.rs.orig  declarator.rs.patch3  declarator.rs.patch4  declarator.rs.rej  enum_parsing.rs  error.rs  errors.rs  expr_interner.rs  expressions.rs  lexer.rs  mod.rs  parsed_type_builder.rs  parser.rs  statements.rs  string_interner.rs  struct_parsing.rs  tests_declarations.rs  tests_parser.rs  token.rs  type_builder.rs  type_specifiers.rs  utils.rs
src/pp/: builtins.rs  directives.rs  dumper.rs  error.rs  expr_parser.rs  header_search.rs  interpreter.rs  keyword_table.rs  macros.rs  mod.rs  pp_lexer.rs  preprocessor.rs  tests_digraphs.rs  tests_pasting.rs  tests_pp_lexer.rs  tests_preprocessor.rs  types.rs
src/preprocessor/: error.rs  lexer.rs  mod.rs  pp_lexer.rs  preprocessor.rs  tests_pp_lexer.rs  token.rs
src/semantic/: .tests_mir.rs.pending-snap  .tests_symbol_redefinition.rs.pending-snap  analyzer.rs  ast_to_mir.rs  const_eval.rs  conversions.rs  error.rs  errors.rs  expressions.rs  literal_utils.rs  lower.rs  lower_expression.rs  lower_initializer.rs  lowerer.rs  lowering.rs  mir_ops.rs  mod.rs  name_resolver.rs  output.rs  resolver.rs  struct_lowering.rs  symbol_resolver.rs  symbol_table.rs  tests_array_init_bug.rs  tests_common.rs  tests_compound_assign.rs  tests_crash_repro.rs  tests_enum_const.rs  tests_generic.rs  tests_lowering.rs  tests_lvalue.rs  tests_mir.rs  tests_noreturn.rs  tests_resolver.rs  tests_symbol_redefinition.rs  tests_type_checker.rs  tests_types.rs  tests_validation.rs  tests_vla.rs  type_checker.rs  (+7 more)
src/snapshots/: cendol__tests_ast_dumper__ast_dumper_simple_expression.snap
src/source_manager/: tests.rs  tests_source_manager.rs
src/tests/: .pp_has_include.rs.pending-snap  .preprocessor.rs.pending-snap  .semantic_mir.rs.pending-snap  abi_compat.rs  ast_dumper.rs  ast_dumper_coverage.rs  ast_nodes_coverage.rs  atomic_builtins.rs  bitwise_builtins.rs  bolt_regr_variadic_prescan.rs  builtin_expect.rs  builtin_offsetof.rs  codegen.rs  codegen_abi.rs  codegen_abi_compat.rs  codegen_alias.rs  codegen_alignas.rs  codegen_array.rs  codegen_asm.rs  codegen_atomic.rs  codegen_basics.rs  codegen_bitfield.rs  codegen_bool_cast.rs  codegen_bswap.rs  codegen_builtin_choose_expr.rs  codegen_builtin_constant_p.rs  codegen_builtin_prefetch.rs  codegen_builtin_unreachable.rs  codegen_builtins.rs  codegen_builtins_bitwise.rs  codegen_calls.rs  codegen_cast_init.rs  codegen_common.rs  codegen_float.rs  codegen_float_bool.rs  codegen_float_to_int_oob.rs  codegen_func_ptr_global.rs  codegen_global_redeclaration.rs  codegen_inc_bool.rs  codegen_large_array.rs  (+385 more)
tests/: C11_TEST_RUNNER.md  bad_input.rs  c11_features.rs  codegen.rs  common.rs  enum.rs  external.c  float.rs  for_loop.rs  long_long.rs  mod.rs  parser.rs  pointers.rs  preprocessor.rs  struct_access.rs  switch.rs  test_lexer.rs  test_parser.rs  test_preprocessor.rs  utils.rs  verbose.rs
tests/codegen/: alignof.c  global_struct.c
tests/execution/: bool_increment.c
tests/fixtures/: basic_enum.c  c11_comprehensive.c
tests/semantic/: neg_goto_vla_scope.c  neg_switch_vla_scope.c
tests/snapshots/: bad_input__type_mismatch.snap  (+16 more)
(+382 files in other folders)
