[package]
name = "cendol"
version = "0.4.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hashbrown = { version = "0.17", features = ["serde"] }
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
indexmap = "2.13"
chrono = "0.4"
memchr = "2.7"
bitflags = { version = "2.6", features = ["serde"] }
rustc-hash = "2.1"
target-lexicon = "0.13"
symbol_table = { version = "0.5", features = ["global", "serde"] }
cranelift = "0.132"
cranelift-module = "0.132"
cranelift-object = "0.132"
cranelift-frontend = "0.132"
annotate-snippets = "0.12"
serde = { version = "1.0", features = ["derive"] }
thin-vec = {version = "0.2", features = ["serde"]}
smallvec = { version = "1.15", features = ["serde"] }
tempfile = "3.26"

[dev-dependencies]
insta = { version = "1.40", features = ["yaml", "serde"] }
serde_yaml = "0.9"
libc = "0.2"
criterion = { version = "0.8", features = ["html_reports"] }

[features]
insta = []

[lints.clippy]
bool_comparison = "allow" ## reason: `== false` is more readable in some cases

[[bench]]
name = "compiler_benches"
harness = false
