[package]
name = "cendol"
version = "0.4.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hashbrown = { version = "0.17", features = ["serde"] }
rustc-hash = "2.1"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
indexmap = "2.13"
chrono = "0.4"
memchr = "2.7"
bitflags = { version = "2.6", features = ["serde"] }
target-lexicon = "0.13"
symbol_table = { version = "0.5", features = ["global", "serde"] }
cranelift = { workspace = true }
cranelift-module = { workspace = true }
cranelift-object = { workspace = true }
cranelift-frontend = { workspace = true }
annotate-snippets = "0.12"
serde = { version = "1.0", features = ["derive"] }
thin-vec = {version = "0.2", features = ["serde"]}
smallvec = { version = "1.15", features = ["serde"] }
tempfile = "3.26"

[dev-dependencies]
insta = { version = "1.40", features = ["yaml", "serde"] }
serde_yaml = "0.9"
libc = "0.2"
criterion = { version = "0.8", features = ["html_reports"] }

[features]
insta = []

[lints.clippy]
bool_comparison = "allow" ## reason: `== false` is more readable in some cases

[[bench]]
name = "compiler_benches"
harness = false

[workspace]
resolver = "2"
members = [
    ".",
    "crates/cranelift/umbrella",
    "crates/cranelift/codegen",
    "crates/cranelift/frontend",
    "crates/cranelift/module",
    "crates/cranelift/object",
    "crates/cranelift/entity",
    "crates/cranelift/bforest",
    "crates/cranelift/bitset",
    "crates/cranelift/control",
    "crates/cranelift/reader",
    "crates/cranelift/assembler-x64",
    "crates/cranelift/srcgen",
    "crates/cranelift/interpreter",
    "crates/cranelift/jit",
    "crates/cranelift/native",
]

[workspace.package]
edition = "2024"
rust-version = "1.94.0"

[workspace.dependencies]
cranelift = { path = "crates/cranelift/umbrella", version = "0.133.1" }
cranelift-codegen = { path = "crates/cranelift/codegen", version = "0.133.1", default-features = false, features = ["unwind"] }
cranelift-frontend = { path = "crates/cranelift/frontend", version = "0.133.1" }
cranelift-module = { path = "crates/cranelift/module", version = "0.133.1" }
cranelift-object = { path = "crates/cranelift/object", version = "0.133.1" }
cranelift-entity = { path = "crates/cranelift/entity", version = "0.133.1" }
cranelift-bforest = { path = "crates/cranelift/bforest", version = "0.133.1" }
cranelift-bitset = { path = "crates/cranelift/bitset", version = "0.133.1" }
cranelift-control = { path = "crates/cranelift/control", version = "0.133.1", default-features = false }
cranelift-reader = { path = "crates/cranelift/reader", version = "0.133.1" }
cranelift-assembler-x64 = { path = "crates/cranelift/assembler-x64", version = "0.133.1" }
cranelift-srcgen = { path = "crates/cranelift/srcgen", version = "0.133.1" }
cranelift-interpreter = { path = "crates/cranelift/interpreter", version = "0.133.1" }
cranelift-jit = { path = "crates/cranelift/jit", version = "0.133.1" }
cranelift-native = { path = "crates/cranelift/native", version = "0.133.1" }

# Inherited third-party dependencies with their exact Wasmtime versions
arbitrary = "1.4.2"
arbtest = "0.3.2"
anyhow = { version = "1.0.100", default-features = false }
bumpalo = "3.20.2"
capstone = { version = "0.14.0", default-features = false, features = ['full', 'arch_x86', 'arch_riscv', 'arch_arm64', 'arch_sysz'] }
hashbrown = { version = "0.17", default-features = false }
target-lexicon = "0.13.3"
log = { version = "0.4.28", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ['alloc'] }
serde_derive = "1.0.228"
pulley-interpreter = { version = "46.0.1" }
postcard = { version = "1.1.3", default-features = false, features = ['alloc'] }
gimli = { version = "0.33.0", default-features = false, features = ['read'] }
smallvec = { version = "1.15.1", features = ["union"] }
regalloc2 = "0.15.1"
sha2 = { version = "0.10.2", default-features = false }
rustc-hash = { version = "2.1.1", default-features = false }
wasmtime-core = { version = "46.0.1", package = 'wasmtime-internal-core' }
wasmtime-jit-icache-coherence = { version = "46.0.1", package = 'wasmtime-internal-jit-icache-coherence' }
wasmtime-unwinder = { version = "46.0.1", package = 'wasmtime-internal-unwinder' }
object = { version = "0.39.0", default-features = false, features = ['read_core', 'elf'] }
libm = "0.2.16"
cfg-if = "1.0"
thiserror = "2.0.17"
similar = "2.7.0"
toml = "0.9.8"
walkdir = "2.5.0"
clap = { version = "4.5.48", default-features = false, features = ["std", "derive"] }
criterion = { version = "0.8.2", default-features = false, features = ["html_reports", "rayon"] }
proptest = "1.11.0"
env_logger = "0.11.5"
filecheck = "0.5.0"
libc = { version = "0.2.185", default-features = true }
windows-sys = "0.61.2"

[workspace.lints.rust]
unused_extern_crates = 'warn'
trivial_numeric_casts = 'warn'
unstable_features = 'warn'
unused_import_braces = 'warn'
unused-lifetimes = 'warn'
unused-macro-rules = 'warn'

[workspace.lints.clippy]
all = { level = 'allow', priority = -1 }
clone_on_copy = 'warn'
map_clone = 'warn'
uninlined_format_args = 'warn'
unnecessary_to_owned = 'warn'
manual_strip = 'warn'
useless_conversion = 'warn'
unnecessary_mut_passed = 'warn'
unnecessary_fallible_conversions = 'warn'
unnecessary_cast = 'warn'
allow_attributes_without_reason = 'warn'
from_over_into = 'warn'
redundant_field_names = 'warn'
multiple_bound_locations = 'warn'
extra_unused_type_parameters = 'warn'
